--- a/css/chem-styles.css
+++ b/css/chem-styles.css
@@ -1,3 +1,82 @@
+h2, .h2 {
+  font-size: 1rem !important;
+}
+
+@media (min-width: 992px) {
+  h2, .h2 {
+    font-size: 1.3rem !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  h2, .h2 {
+    font-size: 1.9rem !important;
+  }
+}
+
+@media (min-width: 1400px) {
+  h2, .h2 {
+    font-size: 2.3rem !important;
+  }
+}
+
+@media (min-width: 1948px) {
+  h2, .h2 {
+    font-size: 3.3rem !important;
+  }
+}
+
+h5 {
+  font-size: 0.7rem !important;
+}
+
+@media (min-width: 992px) {
+  h5, .h5 {
+    font-size: 0.8rem !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  h5, .h5 {
+    font-size: 0.8rem !important;
+  }
+}
+
+@media (min-width: 1400px) {
+  h5, .h5 {
+    font-size: 1rem !important;
+  }
+}
+
+@media (min-width: 1948px) {
+  h5, .h5 {
+    font-size: 1.2rem !important;
+  }
+}
+
+p {
+  font-size: 0.5rem !important;
+  margin-bottom: 0.3rem !important;
+}
+
+@media (min-width: 1200px) {
+  p, .p {
+    font-size: 0.5rem !important;
+  }
+}
+
+@media (min-width: 1400px) {
+  p, .p {
+    font-size: 0.75rem !important;
+  }
+}
+
+@media (min-width: 1948px) {
+  p, .p {
+    font-size: 1rem !important;
+  }
+}
+
 .parent {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
