--- a/css/custom-portfolio-style.css
+++ b/css/custom-portfolio-style.css
@@ -3,8 +3,103 @@
     column-count: 2;
   }
 }
+
 @media (max-width: 768px) {
   .card-columns {
     column-count: 1;
+  }
+}
+
+#scrolldownDisplay span {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  border-left: 1px solid #6c757d;
+  border-bottom: 1px solid #6c757d;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-animation: sdb 2s infinite;
+  animation: sdb 2s infinite;
+  opacity: 0;
+}
+
+#scrolldownDisplay span:nth-of-type(1) {
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+}
+
+#scrolldownDisplay span:nth-of-type(2) {
+  top: 16px;
+  -webkit-animation-delay: .15s;
+  animation-delay: .15s;
+}
+
+#scrolldownDisplay span:nth-of-type(3) {
+  top: 32px;
+  -webkit-animation-delay: .3s;
+  animation-delay: .3s;
+}
+
+@-webkit-keyframes sdb {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes sdb {
+  0% {
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+.badge-pulsing {
+  color: #212529;
+  background-color: #f8bbd0;
+}
+
+.badge-pulsing[href]:hover,
+.badge-pulsing[href]:focus {
+  color: #fff;
+  text-decoration: none;
+  background-color: #880e4f;
+  animation: none
+}
+
+.badge-pulsing {
+  position: relative;
+  animation: animate 3s linear infinite
+}
+
+@keyframes animate {
+  0% {
+    box-shadow: 0 0 0 0 rgb(248, 187, 208, 0.7), 0 0 0 0 rgb(248, 187, 208, 0.7)
+  }
+
+  40% {
+    box-shadow: 0 0 0 20px rgb(255, 109, 74, 0), 0 0 0 0 rgb(248, 187, 208, 0.7)
+  }
+
+  80% {
+    box-shadow: 0 0 0 20px rgb(255, 109, 74, 0), 0 0 0 20px rgb(255, 109, 74, 0)
+  }
+
+  100% {
+    box-shadow: 0 0 0 0 rgb(255, 109, 74, 0), 0 0 0 20px rgb(255, 109, 74, 0)
   }
 }
